# AIWerewolfGame

./: .gitignore  README.md  app.py  check_image.py  crypto.py  db.py  exam.py  exam_old.html  game_manager.py  group_chat.py  jest.config.js  logger.py  package.json  process_images.py  pyproject.toml  remove_background.py  remove_bg_api.py  requirements.txt  simple_remove_bg.py  tailwind.config.js
coverage/: app.js.html  index.html  lcov.info
coverage/lcov-report/: app.js.html  index.html
exam_files/: (中文）化学精选50题.txt  (中文）物理精选50题.txt  英语考试50题.txt  高中奥数精选50题（题目与答案）.txt  （中文）语文精选50题.txt
game/: action_parser.py  ai_player.py  config.py  context_builder.py  day_phase.py  engine.py  error_handler.py  llm_client.py  mvp.py  night_phase.py  prompts.py  roles.py  text_utils.py  utils.py  voice_config.py  voice_player.py
scripts/: check-syntax.js
static/: app.js.deprecated.bak  exam.html  group_chat.html  index.html  style.css  voice_player.js
static/css/: custom-animations.css  custom-style.css  style.css
static/js/: achievements.js  animation.js  audio.js  cinematicTransitions.js  config.js  constants.js  dailyChallenge.js  domCache.js  errorHandler.js  gameState.js  logger.js  main.js  messageHandler.js  moduleLoader.js  mvp.js  personality.js  providers.js  replay.js  resourceManager.js  roles.js  sceneBackground.js  security.js  skillEffects.js  speechPlayer.js  stats.js  storage.js  (+5 more)
tests/: TEST_README.md  test_ai_player.py  test_app.py  test_crypto.py  test_engine.py  test_exam.py  test_logger.py  test_roles.py  test_voice_config.py  test_voice_player.py
(+5 files in other folders)
